fixes contrast issue, adds schema, adds focus state, and adds alt tag

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  /* background-color: grey; */
   margin: 0;
   padding: 0;
 }
@@ -22,6 +22,11 @@ h6 {
 
 img {
   width: 100%;
+}
+
+/* adds focus state to links when selected */
+a:focus {
+  outline: 4px solid black;
 }
 
 .main-nav ul {
